# boolstuff

./: Makefile.am  Makefile.in  NEWS  README  aclocal.m4  boolstuff-0.1.pc  boolstuff-0.1.spec  boolstuff-0.1.spec.in  configure  configure.ac
debian/: README.source  boolstuff-dev.manpages  boolstuff.manpages  changelog  control  copyright  rules  watch
debian/patches/: dynamic_exceptions.patch  series  switch_fallthrough.patch
doc/: booldnf.1  booldnf.1.in  boolstuff.3  boolstuff.3.in
examples/: Makefile.am  Makefile.in  c-example.c  example.cpp  non-string-nodes.cpp
src/: Makefile.in
src/boolstuff/: BoolExpr.cpp  BoolExpr.h  BoolExprParser.cpp  BoolExprParser.h  Makefile.am  Makefile.in  c-api.cpp  c-api.h  check-test-cases.pl  checkc.c  checkdnf.cpp  test-cases.txt
src/commands/: Makefile.am  Makefile.in  booldnf.cpp  regressions.txt  test-regressions.pl
